// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag component testing Tag black 1`] = `
<div>
  <div
    class="styles__TagContainer-sc-1qkmyn8-0 bTRUCB"
  >
    <div
      class="styles__TagText-sc-1qkmyn8-1 gHXyDU"
    >
      New
    </div>
  </div>
</div>
`;

exports[`Tag component testing Tag default 1`] = `
<div>
  <div
    class="styles__TagContainer-sc-1qkmyn8-0 dUpTdI"
    data-testid="tag-testing"
    id="tag"
  >
    <div
      class="styles__TagText-sc-1qkmyn8-1 gHXyDU"
    >
      New
    </div>
  </div>
</div>
`;

exports[`Tag component testing Tag expired 1`] = `
<div>
  <div
    class="styles__TagContainer-sc-1qkmyn8-0 iPnjbi"
  >
    <div
      class="styles__TagText-sc-1qkmyn8-1 gHXyDU"
    >
      New
    </div>
  </div>
</div>
`;

exports[`Tag component testing Tag green 1`] = `
<div>
  <div
    class="styles__TagContainer-sc-1qkmyn8-0 gTLZvS"
  >
    <div
      class="styles__TagText-sc-1qkmyn8-1 gHXyDU"
    >
      New
    </div>
  </div>
</div>
`;

exports[`Tag component testing Tag grey 1`] = `
<div>
  <div
    class="styles__TagContainer-sc-1qkmyn8-0 FfwMZ"
  >
    <div
      class="styles__TagText-sc-1qkmyn8-1 gHXyDU"
    >
      New
    </div>
  </div>
</div>
`;

exports[`Tag component testing Tag left aligned 1`] = `
<div>
  <div
    class="styles__TagContainer-sc-1qkmyn8-0 iTKFok"
  >
    <div
      class="styles__TagText-sc-1qkmyn8-1 gHXyDU"
    >
      New
    </div>
  </div>
</div>
`;

exports[`Tag component testing Tag pending 1`] = `
<div>
  <div
    class="styles__TagContainer-sc-1qkmyn8-0 fgBNef"
  >
    <div
      class="styles__TagText-sc-1qkmyn8-1 gHXyDU"
    >
      New
    </div>
  </div>
</div>
`;

exports[`Tag component testing Tag red 1`] = `
<div>
  <div
    class="styles__TagContainer-sc-1qkmyn8-0 jGGGbO"
  >
    <div
      class="styles__TagText-sc-1qkmyn8-1 gHXyDU"
    >
      New
    </div>
  </div>
</div>
`;

exports[`Tag component testing Tag regular alignment 1`] = `
<div>
  <div
    class="styles__TagContainer-sc-1qkmyn8-0 dUpTdI"
  >
    <div
      class="styles__TagText-sc-1qkmyn8-1 gHXyDU"
    >
      New
    </div>
  </div>
</div>
`;

exports[`Tag component testing Tag rejected 1`] = `
<div>
  <div
    class="styles__TagContainer-sc-1qkmyn8-0 jnDidn"
  >
    <div
      class="styles__TagText-sc-1qkmyn8-1 gHXyDU"
    >
      New
    </div>
  </div>
</div>
`;

exports[`Tag component testing Tag success 1`] = `
<div>
  <div
    class="styles__TagContainer-sc-1qkmyn8-0 iQRtCb"
  >
    <div
      class="styles__TagText-sc-1qkmyn8-1 gHXyDU"
    >
      New
    </div>
  </div>
</div>
`;

exports[`Tag component testing Tag with custom colors 1`] = `
<div>
  <div
    class="styles__TagContainer-sc-1qkmyn8-0 QKzxS"
  >
    <div
      class="styles__TagText-sc-1qkmyn8-1 gHXyDU"
    >
      New
    </div>
  </div>
</div>
`;

exports[`Tag component testing Tag yellow 1`] = `
<div>
  <div
    class="styles__TagContainer-sc-1qkmyn8-0 jpqndr"
  >
    <div
      class="styles__TagText-sc-1qkmyn8-1 gHXyDU"
    >
      New
    </div>
  </div>
</div>
`;
